# ipc-bridge

./: .gitignore
ipc_bridge/: Makefile  generate_msgs.sh  ipc_bridge.mk  manifest.xml
ipc_bridge/include/ipc_bridge/: ipc_bridge.h
ipc_bridge/xdr/: acroname_moto_motor_debug.xdr  actionlib_msgs_GoalID.xdr  actionlib_msgs_GoalStatus.xdr  actionlib_msgs_GoalStatusArray.xdr  asctec_DMCmd.xdr  asctec_HWCmd.xdr  asctec_PDCmd.xdr  asctec_Trim.xdr  asctec_Voltage.xdr  geometry_msgs_Point32.xdr  geometry_msgs_PoseArray.xdr  geometry_msgs_PoseWithCovariance.xdr  geometry_msgs_PoseWithCovarianceStamped.xdr  geometry_msgs_Transform.xdr  geometry_msgs_TransformStamped.xdr  geometry_msgs_Twist.xdr  geometry_msgs_TwistWithCovariance.xdr  geometry_msgs_Vector3.xdr  geometry_msgs_Wrench.xdr  mesh80211s_MeshStation.xdr  mesh80211s_MeshStations.xdr  move_base_msgs_MoveBaseActionFeedback.xdr  move_base_msgs_MoveBaseActionGoal.xdr  move_base_msgs_MoveBaseActionResult.xdr  move_base_msgs_MoveBaseFeedback.xdr  move_base_msgs_MoveBaseGoal.xdr  move_base_msgs_MoveBaseResult.xdr  nav_msgs_GridCells.xdr  nav_msgs_MapMetaData.xdr  nav_msgs_Odometry.xdr  odometry_aggregator_OdometryArray.xdr  roslib_Header.xdr  sensor_msgs_Imu.xdr  sensor_msgs_LaserScan.xdr  tf_tfMessage.xdr  vicon_Names.xdr  vicon_Subject.xdr  vicon_Values.xdr
ipc_bridge_local/: ipc_bridge_local.mk  manifest.xml
ipc_bridge_matlab/: Makefile  ipc_bridge_matlab.mk  manifest.xml
ipc_bridge_matlab/include/ipc_bridge_matlab/: ipc_bridge_matlab.h  mex_interface.h
ipc_bridge_matlab/scripts/: comp_struct_license.txt  ipc_ros.m  msg_test.m  run_test.m
ipc_bridge_matlab/src/: acroname_moto_motor_debug.cc  asctec_DMCmd.cc  asctec_HWCmd.cc  asctec_PDCmd.cc  asctec_Trim.cc  asctec_Voltage.cc  geometry_msgs_Point.cc  geometry_msgs_Point32.cc  geometry_msgs_PointStamped.cc  geometry_msgs_Pose.cc  geometry_msgs_PoseArray.cc  geometry_msgs_PoseStamped.cc  geometry_msgs_PoseWithCovariance.cc  geometry_msgs_PoseWithCovarianceStamped.cc  geometry_msgs_Quaternion.cc  geometry_msgs_Transform.cc  geometry_msgs_TransformStamped.cc  geometry_msgs_Twist.cc  geometry_msgs_TwistStamped.cc  geometry_msgs_TwistWithCovariance.cc  geometry_msgs_Vector3.cc  geometry_msgs_Wrench.cc  nav_msgs_GridCells.cc  nav_msgs_MapMetaData.cc  nav_msgs_OccupancyGrid.cc  nav_msgs_Odometry.cc  nav_msgs_Path.cc  odometry_aggregator_OdometryArray.cc  roslib_Header.cc  sensor_msgs_ChannelFloat32.cc  sensor_msgs_Image.cc  sensor_msgs_Imu.cc  sensor_msgs_LaserScan.cc  sensor_msgs_PointCloud.cc  tf_tfMessage.cc  vicon_Names.cc  vicon_Subject.cc  vicon_Values.cc
ipc_bridge_ros/: CMakeLists.txt  ipc_bridge_ros.mk  mainpage.dox  manifest.xml
ipc_bridge_ros/include/: publisher.h  subscriber.h
ipc_bridge_ros/src/: actionlib_msgs_GoalID_publisher.cc  actionlib_msgs_GoalID_subscriber.cc  actionlib_msgs_GoalStatusArray_publisher.cc  actionlib_msgs_GoalStatusArray_subscriber.cc  asctec_DMCmd_subscriber.cc  asctec_HWCmd_subscriber.cc  asctec_PDCmd_publisher.cc  asctec_PDCmd_subscriber.cc  asctec_Trim_subscriber.cc  geometry_msgs_PoseArray_publisher.cc  geometry_msgs_PoseStamped_subscriber.cc  geometry_msgs_PoseWithCovariance_publisher.cc  geometry_msgs_PoseWithCovariance_subscriber.cc  geometry_msgs_Pose_subscriber.cc  geometry_msgs_Twist_subscriber.cc  move_base_msgs_MoveBaseActionFeedback_publisher.cc  move_base_msgs_MoveBaseActionFeedback_subscriber.cc  move_base_msgs_MoveBaseActionGoal_publisher.cc  move_base_msgs_MoveBaseActionGoal_subscriber.cc  move_base_msgs_MoveBaseActionResult_publisher.cc  move_base_msgs_MoveBaseActionResult_subscriber.cc  nav_msgs_Odometry_publisher.cc  odometry_aggregator_OdometryArray_publisher.cc  sensor_msgs_Image_publisher.cc  sensor_msgs_Imu_publisher.cc  sensor_msgs_LaserScan_publisher.cc  sensor_msgs_PointCloud_subscriber.cc  tf_tfMessage_publisher.cc  tf_tfMessage_subscriber.cc  vicon_Names_publisher.cc  vicon_Subject_subscriber.cc  vicon_Values_publisher.cc
ipc_msgs/: stack.xml
ipc_msgs/ipc_geometry_msgs/: Makefile  ipc_geometry_msgs.mk  manifest.xml
ipc_msgs/ipc_geometry_msgs/include/: geometry_msgs_Point.h  geometry_msgs_Point32.h  geometry_msgs_PointStamped.h  geometry_msgs_Pose.h  geometry_msgs_PoseArray.h  geometry_msgs_PoseStamped.h  geometry_msgs_PoseWithCovariance.h  geometry_msgs_PoseWithCovarianceStamped.h  (+8 more)
ipc_msgs/ipc_nav_msgs/: Makefile  ipc_nav_msgs.mk  manifest.xml
ipc_msgs/ipc_rosgraph_msgs/: Makefile  ipc_rosgraph_msgs.mk  mainpage.dox  manifest.xml
ipc_msgs/ipc_roslib/: Makefile  ipc_roslib.mk  manifest.xml
ipc_msgs/ipc_sensor_msgs/: .gitignore  Makefile  ipc_sensor_msgs.mk  manifest.xml
ipc_msgs/ipc_std_msgs/: Makefile  ipc_std_msgs.mk  mainpage.dox  manifest.xml
(+147 files in other folders)
